# janimProj

./: .gitignore  LICENSE  README.md  pyproject.toml
BusyBeaver/: README.md  dirty_patch.py  gen_BB5_grid.py  generate_bbs.py  render_all.py  s1_NestedSequence.py  s2_TuringMachineAndHalt.py  s3_BusyBeaver.py  s4_ConcreteComparison.py  test_scene.py  tools.py
BusyBeaver/history_grid/: history_cell.py  history_grid.py
BusyBeaver/langton_ant/: core.py  langton_ant_grid.py
BusyBeaver/resources/: turings_5.txt
BusyBeaver/resources/bbs_track/: BB2.txt  BB3.txt  BB4.txt  BB5.txt
BusyBeaver/resources/different_tms_instances/: bell.txt  bouncer.txt  chaotic.txt  counter.txt  cycler.txt  fractal.txt  translated_cycler.txt
BusyBeaver/turing_machine/: core.py  models.py  tapecore.py  turing_machine.py  turingcore.py
BusyBeaver/turing_machine/components/: grid_cell.py  grid_table.py  paper_tile.py  tape_cell.py  turing_counter.py  turing_machine_transform.py
BusyBeaver/turing_machine/effects/: alpha_vignette.glsl  alpha_vignette.py  chromatic.glsl  chromatic.py  identity.glsl  identity.py  lens.glsl  lens.py
BusyBeaver/turing_machine/logic/: tapecore.py  turingcore.py
BusyBeaver/typ_docs/: 10_nest_pow_15.typ  a_plus_b.typ  ackermann.typ  arxiv_bb27.typ  bb_744_blog.typ  big_numbers.typ  collatz.typ  different_turing_type.typ  heading_instruction.typ  loop_5_1_trans.typ  loop_or_finish.typ  many_tms.typ  preamble.typ  sp_config_rules.typ  symmetry_compress.typ  tape_cell_instruction.typ  why_max_step.typ
BusyBeaver/typst_dfa/: typst_dfa.py
(+13 files in other folders)
